US#42-Task#61 Updated the database with grades

--- a/Login/views/register.ejs
+++ b/Login/views/register.ejs
@@ -28,6 +28,17 @@
             value="<%= typeof email != 'undefined' ? email : '' %>"
           />
         </div>
+		<div class="form-group">
+          <label for="grade">Grade</label>
+          <input
+            type="grade"
+            id="grade"
+            name="grade"
+            class="form-control"
+            placeholder="Enter Grade"
+            value="<%= typeof grade != 'undefined' ? grade : '' %>"
+          />
+        </div>
         <div class="form-group">
           <label for="password">Password</label>
           <input
