--- a/Login/views/teacherdashboard.ejs
+++ b/Login/views/teacherdashboard.ejs
@@ -3,7 +3,7 @@
     <head></head>
     <body>
         <center>
-            <h1>TEACHER DASHBOARD</h1><br><br><br>
+            <h1><big>TEACHER DASHBOARD</big></h1><br><br><br>
             <input type="button" value="Add Quiz">
         </center>
     </body>
