US#62-Task#68 Added add user button to Admin dashboard

--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta name="author" content="Lakshmi Kala Pedarla">
+<meta name="author" content="Lakshmi kala Pedarla">
 <html>
     <head></head>
     <body>
