--- a/Login/views/register.ejs
+++ b/Login/views/register.ejs
@@ -1,3 +1,8 @@
+/**
+ * @author Narendra Mohan
+ *
+ */
+
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
