US#64 - Task#73 Updated adminDashboard added delete user button

--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -8,6 +8,7 @@
             <h1>ADMIN DASHBOARD</h1><br><br><br>
             <input type="button" value="Add User" style="font-size : 20px"/>
             <input type="button" value="Update User" style="font-size : 20px"/>
+            <input type="button" value="Delete User" style="font-size : 20px"/>
         </center>
     </body>
 </html>
