--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -7,8 +7,7 @@
         <center>
             <h1>ADMIN DASHBOARD</h1><br><br><br>
             <input type="button" value="Add User" style="font-size : 20px"/>
-
-            <input type="button" value="Update User" style="font-size : 20px"/>
+            <a value="Update User" href="/users/updateUser" style="font-size : 20px">update User</a>
             <input type="button" value="Delete User" style="font-size : 20px"/>
 
         </center>
