Task#86 user name displayed on workspace

--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -8,6 +8,7 @@
         <a class="navbar-brand" href="#">
             SER 515 - Team 18
         </a>
+        <p class="navbar-brand">Hi <%= user.name %></p>
         <a href="/users/logout" class="navbar-brand pull-right">Log Out</a>
     </nav>
     <div class="container-fluid">
