--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -7,7 +7,7 @@
         <center>
             <h1>ADMIN DASHBOARD</h1><br><br><br>
             <a href="/users/register" style="font-size : 20px">Add User</a>
-            <a value="Update User" href="/users/updateUser" style="font-size : 20px">update User</a>
+            <a value="Update User" href="/users/searchUser" style="font-size : 20px">update User</a>
             <input type="button" value="Delete User" style="font-size : 20px"/>
 
         </center>
