US#63 Task#88 Sent email parameter to update user

--- a/Login/views/searchUser.ejs
+++ b/Login/views/searchUser.ejs
@@ -6,7 +6,7 @@
           <i class="fas fa-user-plus"></i> Search Information
         </h1>
         <% include ./partials/messages %>
-        <form action="/users/searchUser" method="GET">
+        <form action="/users/searchUser" method="POST">
           <div class="form-group">
             <label for="name">Search Name to be Updated</label>
             <input
@@ -22,7 +22,7 @@
             Search
           </button>
         </form>
-
+        
         
         
         
