--- a/Login/views/updateUser.ejs
+++ b/Login/views/updateUser.ejs
@@ -1,3 +1,41 @@
 
 <p>update User</p>
-<p> <%= user.name %> </p>
+
+<form action="/updateUser" method="POST">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input
+        type="name"
+        id="name"
+        name="name"
+        class="form-control"
+        placeholder= <%= user.name %>
+        value="<%= typeof name != 'undefined' ? name : '' %>"
+      />
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        class="form-control"
+        placeholder=  <%= user.email %>
+        value="<%= typeof email != 'undefined' ? email : '' %>"
+      />
+    </div>
+        <div class="form-group">
+      <label for="grade">Grade</label>
+      <input
+        type="grade"
+        id="grade"
+        name="grade"
+        class="form-control"
+        placeholder=  <%= user.grade %>
+        value="<%= typeof grade != 'undefined' ? grade : '' %>"
+      />
+    </div>
+    <button type="submit" class="btn btn-primary btn-block">
+      Update
+    </button>
+  </form>
