US#63-Task#78 update user functionality added

--- a/Login/views/updateUser.ejs
+++ b/Login/views/updateUser.ejs
@@ -1,7 +1,7 @@
 
 <p>update User</p>
 
-<form action="/updateUser" method="POST">
+<form action="/users/updateUser/<%= user._id %>" method="POST">
     <div class="form-group">
       <label for="name">Name</label>
       <input
