US#65-Task#94 Added Add question button to create Quiz page

--- a/Login/views/createQuiz.ejs
+++ b/Login/views/createQuiz.ejs
@@ -13,16 +13,25 @@
          <br/>
          <div id="quiz"></div><center>
          <form action="">
-            Enter Title:<br>
+            Enter Title:
             <input id="quiz-title" xplaceholder="enter a quiz Title" type="text" value placeholder="Give Title to the quiz"/>
-            <br>
+            
+            <button type="submit"> DONE </button> </br>
+
             Select Type of Quiz:<br>
             <select name="quizType">
                <option value="unlimited Time">unlimited Time</option>
                <option value="limited time">limited time</option>
                <option value="unlimited attempts">unlimited attempts</option>
                <option value="limited attempts">limited attempts</option>
-            </select>
+            </select></br><br>
+            <div id="question">
+               
+               
+            <button> +Add question </button> </br>
+            
+
+         </div>
          </form>
      </center>
       </div>
