US#65-Task#95 Added Textarea in create quiz page to add a question for the quiz

--- a/Login/views/createQuiz.ejs
+++ b/Login/views/createQuiz.ejs
@@ -26,10 +26,8 @@
                <option value="limited attempts">limited attempts</option>
             </select></br><br>
             <div id="question">
-               
-               
-            <button> +Add question </button> </br>
-            
+            <textarea value placeholder="Enter your question here"></textarea></br>
+               <button> +Add question </button> </br>
 
          </div>
          </form>
