--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -7,9 +7,9 @@
         <center>
             <h1>ADMIN DASHBOARD</h1><br><br><br>
             <a href="/users/register" style="font-size : 20px">Add User</a>
-            <a value="Update User" href="/users/searchUser" style="font-size : 20px">update User</a>
-            <input type="button" value="Delete User" style="font-size : 20px"/>
-
+            <a value="Update User" href="/users/searchUser" style="font-size : 20px">Update User</a>
+            <a value="Delete User" href="/users/searchUserToDelete" style="font-size : 20px">Delete User</a>
+          
         </center>
     </body>
 </html>
