--- a/Login/views/searchUserToDelete.ejs
+++ b/Login/views/searchUserToDelete.ejs
@@ -2,7 +2,7 @@
     <div class="col-md-6 m-auto">
       <div class="card card-body">
         <h1 class="text-center mb-3">
-          <i class="fas fa-user-plus"></i> Search Information
+          <i class="fas fa-user-plus"></i> Search User to delete
         </h1>
         <% include ./partials/messages %>
         <form action="/users/searchUserToDelete" method="POST">
@@ -21,8 +21,7 @@
             Search
           </button>
         </form>
- 
-        
+       
         
         
       </div>
