--- a/Login/views/adminDashboard.ejs
+++ b/Login/views/adminDashboard.ejs
@@ -4,6 +4,14 @@
 <html>
     <head></head>
     <body>
+            <nav class="navbar navbar-dark bg-dark">
+                    
+                        <a class="navbar-brand" href="#">
+                                ADMIN DASHBOARD
+                        </a>
+                    
+                        <a href="/users/logout" class="navbar-brand pull-right">Log Out</a>
+            </nav>
         <center>
             <h1>ADMIN DASHBOARD</h1><br><br><br>
             <a href="/users/register" style="font-size : 20px">Add User</a>
