US#82 Task#90 - Added clear button to clear the content from the workspace

--- a/Login/views/layout.ejs
+++ b/Login/views/layout.ejs
@@ -12,7 +12,7 @@
     <script src="https://ser-515-team.netlify.com/lib/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/main/js/index.js"></script>
     <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/result/js/index.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/widgets/js/index.js"></script>
+    <script type="text/javascript" src="/workspace/widgets/js/index.js"></script>
     <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/history/js/index.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.min.js"></script>
 
