--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -89,7 +89,7 @@
                                 draggable="true">
                         </div>
                         <div class="col-2">
-                            <input type="button" id="clear" value="clear workspace" onclick="clearFunction(this.id)">
+                            <input type="button" id="clear1" value="clear workspace" onclick="clearWorkspace(this.id)">
                         </div>
                     </div>
                 </div>
