--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -88,6 +88,9 @@
                             <input type="button" id="number0" value="0" onclick="addvalueToWorkSpace(this.id)"
                                 draggable="true">
                         </div>
+                        <div class="col-2">
+                            <input type="button" id="clear2" value="clear history" onclick="clearHistory(this.id)">
+                        </div>
                     </div>
                 </div>
                 <br>
