--- a/Login/views/layout.ejs
+++ b/Login/views/layout.ejs
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/main/js/index.js"></script>
     <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/result/js/index.js"></script>
     <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/widgets/js/index.js"></script>
-    <script type="text/javascript" src="https://ser-515-team.netlify.com/workspace/history/js/index.js"></script>
+    <script type="text/javascript" src="/workspace/history/js/index.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.min.js"></script>
 
 
