--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -88,10 +88,6 @@
                             <input type="button" id="number0" value="0" onclick="addvalueToWorkSpace(this.id)"
                                 draggable="true">
                         </div>
-                        <div class="col-2">
-                            <input type="button" id="clear2" value="clear history" onclick="clearHistory(this.id)">
-
-                        </div>
                     </div>
                 </div>
                 <br>
@@ -278,7 +274,9 @@
             </div>
             <div class="col-md-3 historySection">
                 <div class="row navbar">
-                    <div class="col">History</div>
+                    <div class="col">History
+                        <input type="button" id="clear2" value="Clear" onclick="clearHistory(this.id)">
+                    </div>
                 </div>
                 <div id="widgetActivity"></div>
 
