--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -88,9 +88,6 @@
                             <input type="button" id="number0" value="0" onclick="addvalueToWorkSpace(this.id)"
                                 draggable="true">
                         </div>
-                        <div class="col-2">
-                            <input type="button" id="clear1" value="clear workspace" onclick="clearWorkspace(this.id)">
-                        </div>
                     </div>
                 </div>
                 <br>
@@ -265,7 +262,11 @@
 
             <div class="col-md-3 mainSection">
                 <div class="row navbar">
-                    <div class="col" id="work">Workspace</div>
+                    <div class="col" id="work">Workspace
+                        <div class="col-2">
+                            <input type="button" id="clear1" value="Clear" onclick="clearWorkspace(this.id)">
+                        </div>
+                    </div>
                 </div>
                 <p align="center" id="workspace"> </p>
             </div>
