US#82 changed the position of clear workspace button

--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -262,10 +262,8 @@
 
             <div class="col-md-3 mainSection">
                 <div class="row navbar">
-                    <div class="col" id="work">Workspace
-                        <div class="col-2">
+                    <div class="col" id="work" align="center">Workspace
                             <input type="button" id="clear1" value="Clear" onclick="clearWorkspace(this.id)">
-                        </div>
                     </div>
                 </div>
                 <p align="center" id="workspace"> </p>
