US#65-Task#106 Added Textfield to enter Answer for the question

--- a/Login/views/createQuiz.ejs
+++ b/Login/views/createQuiz.ejs
@@ -27,7 +27,8 @@
             </select></br><br>
             <div id="question">
             <textarea value placeholder="Enter your question here"></textarea></br>
-               <button> +Add question </button> </br>
+              Answer: <input type="text" name="answer" size="40"><br>
+                    <input type="button" id="addQuestion_1" onclick="addQuestion()" value="Add Question" />
 
          </div>
          </form>
