--- a/Login/views/updateUser.ejs
+++ b/Login/views/updateUser.ejs
@@ -1,5 +1,5 @@
 
-<p>update User</p>
+<p>Update user</p>
 
 <form action="/users/updateUser/<%= user._id %>" method="POST">
     <div class="form-group">
