--- a/Login/views/createQuiz.ejs
+++ b/Login/views/createQuiz.ejs
@@ -4,68 +4,60 @@
 <html>
 
 <head>
-    <title>Quiz</title>
+    <title>Homework</title>
 </head>
-<script>
-    var index = [];
-    index.push(0);
-    index.push(1);
-
-    function addQuestion() {
-        var id = getID();
-        var div = document.createElement('div');
-        div.setAttribute("id", "addQuestion_" + id);
-        div.innerHTML = '<div><br/></div><input id = "question" placeholder="Enter your question here">'+'<div>Answer: <input id ="answer" type="text" name="answer" size="40"><br></div>' + '<div><input type="button" id="addQuestion_' + id + '" onclick="addQuestion()" value="Add Question"/>' + '<input type="button" id="remQuestion_' + id + '" onclick="remQuestion('+id+')" value="Remove Question" /></div>';
-        document.getElementById('question1').appendChild(div);
-    }
-
-    function remQuestion(id) {
-        var element = document.getElementById("addQuestion_"+id)
-        element.parentNode.removeChild(element);
-        index[id] = -1;
-    }
-
-    function getID() {
-        var emptyIndex = index.indexOf(-1);
-        if (emptyIndex != -1) {
-            index[emptyIndex] = emptyIndex
-
-            return emptyIndex
-        } else {
-            emptyIndex = index.length
-            index.push(emptyIndex)
-            return emptyIndex
-        }
-    }
-</script>
-
 <body>
     <div>
         <h1>
             <center>Create Homework</center>
          </h1>
         <br/>
-        <div id="quiz"></div>
         <center>
+            <% include ./partials/messages %>
             <form action="/users/createQuiz" method="POST">
-                Enter Title:
-                <input id="title" type="text" placeholder="Give title to the homework" />
-                </br>
-
-                Select targeted grade type for the quiz:
-                <select name="gradeType" id = "gradeType">
-                    <option value="Grade1">Grade 1</option>
-                    <option value="Grade6">Grade 6</option>
-                </select>
-                </br>
-                <br>
-                <div id="question1">
-                    <input id="question" placeholder="Enter your question here">
-                    </br>
-
-                    Answer: <input id = "answer" type="text" name="answer" size="40"><br>
-                    <input type="submit" id="addQuestion_1" onclick="addQuestion()" value="Add Question" />
-                </div>
+               <div class="form-group">
+                  <label for="title">Enter title</label>
+                  <input
+                    type="title"
+                    id="title"
+                    name="title"
+                    class="form-control"
+                    placeholder="Enter Title"
+                    value="<%= typeof title != 'undefined' ? title : '' %>"
+                  />
+               </div>
+               <div class="form-group">
+                  <label for="grade">Select Grade</label>
+                  <select name="gradeType" id = "gradeType">
+                     <option value="Grade1">Grade 1</option>
+                     <option value="Grade6">Grade 6</option>
+                  </select>
+               </div>  
+               <div class="form-group">
+                  <label for="question">Enter Question</label>
+                  <input
+                     type="question"
+                     id="question"
+                     name="question"
+                     class="form-control"
+                     placeholder="Enter Question"
+                     value="<%= typeof question != 'undefined' ? question : '' %>"
+                  />
+               </div>
+               <div class="form-group">
+                     <label for="answer">Enter Answer</label>
+                     <input
+                       type="answer"
+                       id="answer"
+                       name="answer"
+                       class="form-control"
+                       placeholder="Enter Answer"
+                       value="<%= typeof answer != 'undefined' ? answer : '' %>"
+                     />
+               </div>
+                    <button type="submit"class="btn btn-primary btn-block" value="Add Question">
+                        Add Question
+                      </button>
             </form>
     </div>
 </body>
