--- a/Login/views/deleteUser.ejs
+++ b/Login/views/deleteUser.ejs
@@ -1,5 +1,6 @@
 
 <p>Delete User</p>
+<% include ./partials/messages %>
 
 <form action="/users/deleteUser/<%= user._id %>" method="POST">
     <div class="form-group">
