--- a/Login/views/updateUser.ejs
+++ b/Login/views/updateUser.ejs
@@ -1,5 +1,6 @@
 
 <p>Update user</p>
+<% include ./partials/messages %>
 
 <form action="/users/updateUser/<%= user._id %>" method="POST">
     <div class="form-group">
