US#80-Task#102 Added side bar onclick functions to student workspace

--- a/Login/views/index.ejs
+++ b/Login/views/index.ejs
@@ -308,5 +308,13 @@
             break;
     }
 </script>
+<script type="text/javascript">
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+    }
 
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+    }
+</script>
 </html>
